--- a/HomeWork26_07_19_2/appsettings.json
+++ b/HomeWork26_07_19_2/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CarsContext": "Server=(localdb)\\mssqllocaldb;Database=CarsContext-65637e20-c374-4e35-8d18-c31ac0d67b5a;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
